--- a/govchain/package.json
+++ b/govchain/package.json
@@ -13,7 +13,18 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "vanilla-tilt": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@ramonak/react-progress-bar": "^5.0.3",
+    "@thirdweb-dev/chains": "^0.1.42",
+    "@thirdweb-dev/react": "^3.14.25",
+    "@thirdweb-dev/sdk": "^3.10.44",
+    "ethers": "^5",
+    
+    "react-confetti-explosion": "^2.1.2",
+    
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1"
+    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +51,13 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.4",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "vite": "^4.4.5",
+    "vite-plugin-node-polyfills": "^0.9.0"
   }
 }
